syntax = "proto3";

package com.sivalabs.bookstore.catalog.v1;

option java_multiple_files = true;
option java_package = "com.sivalabs.bookstore.common.grpc";
option java_outer_classname = "CatalogProto";

service ProductCatalogService {
  rpc ValidateProduct(ProductValidationRequest) returns (ProductValidationResponse);
}

message ProductValidationRequest {
  string product_code = 1;
  double price = 2;
}

message ProductValidationResponse {
  bool valid = 1;
  string message = 2;
  Product product = 3;
}

message Product {
  string code = 1;
  string name = 2;
  double price = 3;
}
